--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <table cellspacing="5" >
         <tr>
             <td><img src="IMG_20210410_220905_389.jpg" alt="not available" width="100" height="150"></td>
-            <td><h1><em><strong> Manish Suthar</strong></em></h1>
-                <p><em>Student at <strong>Kensri school.</strong></em></p></td>
+            <td><h1><em><strong>MS</strong></em></h1>
+                <p><em>Student at <strong>School</strong></em></p></td>
         </tr>
     </table>
     <hr>
